tests/ui/imports/private-import-grouped-suggestion-157453.stderr
error[E0603]: struct import `One` is private
  --> $DIR/private-import-grouped-suggestion-157453.rs:11:22
   |
LL |     use crate::two::{One, Two};
   |                      ^^^ private struct import
   |
note: the struct import `One` is defined here...
  --> $DIR/private-import-grouped-suggestion-157453.rs:6:9
   |
LL |     use crate::one::One;
   |         ^^^^^^^^^^^^^^^
note: ...and refers to the struct `One` which is defined here
  --> $DIR/private-import-grouped-suggestion-157453.rs:2:5
   |
LL |     pub struct One();
   |     ^^^^^^^^^^^^^^^^^ you could import this directly

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
